--- a/YSJViewer/Base.lproj/Main.storyboard
+++ b/YSJViewer/Base.lproj/Main.storyboard
@@ -1,48 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="5Rf-7W-Kf0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="wXm-2d-P6X">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--Login-->
-        <scene sceneID="Lt0-HL-qgz">
-            <objects>
-                <viewController id="5Rf-7W-Kf0" customClass="Login" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="f7g-0z-PtK"/>
-                        <viewControllerLayoutGuide type="bottom" id="ZOa-Ka-IxL"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Cre-Ft-bTq">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="TaD-wd-O9B">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ch-Jw-Aei">
-                                <rect key="frame" x="33" y="442" width="254" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="BtnImg_Login.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="loginClick:" destination="5Rf-7W-Kf0" eventType="touchUpInside" id="RPR-Um-lI2"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="1ip-jK-rIj"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KV1-G7-Nmo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1805" y="380"/>
-        </scene>
         <!--Home - 压缩机助手-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="Home" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Home" id="vXZ-lx-hvc" customClass="Home" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="vaC-rw-gAA"/>
                         <viewControllerLayoutGuide type="bottom" id="o4r-IY-XV1"/>
@@ -509,10 +474,10 @@
             </objects>
             <point key="canvasLocation" x="4347" y="1"/>
         </scene>
-        <!--TestNC-->
+        <!--Navigation Controller-->
         <scene sceneID="JNU-kv-Qhj">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wXm-2d-P6X" customClass="TestNC" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wXm-2d-P6X" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="QRF-3G-Q7N"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cnj-qD-oFQ">
@@ -532,7 +497,6 @@
     <resources>
         <image name="BtnImg_AlarmInfo.png" width="104" height="105"/>
         <image name="BtnImg_DeviceMonitor.png" width="104" height="105"/>
-        <image name="BtnImg_Login.png" width="427" height="52"/>
         <image name="BtnImg_ReserveService.png" width="104" height="105"/>
         <image name="BtnImg_StorageList.png" width="104" height="105"/>
         <image name="BtnImg_SystemSetting.png" width="104" height="105"/>
