--- a/YSJViewer/Base.lproj/Main.storyboard
+++ b/YSJViewer/Base.lproj/Main.storyboard
@@ -608,10 +608,10 @@
             </objects>
             <point key="canvasLocation" x="3106" y="2795"/>
         </scene>
-        <!--Table View Controller - 用户信息修改-->
+        <!--User Info Update - 用户信息修改-->
         <scene sceneID="dD4-h3-wdb">
             <objects>
-                <tableViewController id="BHb-Sb-qWN" sceneMemberID="viewController">
+                <tableViewController id="BHb-Sb-qWN" customClass="UserInfoUpdate" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="pDE-fe-Vjz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -769,6 +769,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="用户信息修改" id="pwY-r0-XxI"/>
+                    <connections>
+                        <outlet property="txtEmail" destination="RDO-XP-ayk" id="IGJ-ic-W8a"/>
+                        <outlet property="txtFax" destination="UYA-xY-cLM" id="MrZ-h4-u9I"/>
+                        <outlet property="txtMobilePhone" destination="37Y-Md-1go" id="6Y8-jg-fKd"/>
+                        <outlet property="txtOfficeTel" destination="keD-fN-gJC" id="Xik-uh-PBE"/>
+                        <outlet property="txtUserName" destination="jjm-5M-jeY" id="ypz-bG-RVO"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tJ5-qW-bdc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
